--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -23,19 +23,19 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-          python-version: 3.9
+    # - name: Set up Python
+    #   uses: actions/setup-python@v2
+    #   with:
+    #       python-version: 3.9
 
-    - name: Install dependencies
-      run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Add any dependencies you have
+    # - name: Install dependencies
+    #   run: |
+    #       python -m pip install --upgrade pip
+    #       pip install -r requirements.txt  # Add any dependencies you have
 
-    - name: Run pytest
-      run: |
-          pytest
+    # - name: Run pytest
+    #   run: |
+    #       pytest
 
     - name: Log in to Azure Container Registry
       env:
@@ -47,10 +47,10 @@ jobs:
 
     - name: List images in ACR
       run: az acr repository list --name d208efad40c54644a94f9c0ee8d073c6 --output table
-    - name: Build and Push Docker Image
-      run: |
-          docker build -t ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build ./federated_learning/server
-          docker push d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build
+    # - name: Build and Push Docker Image
+    #   run: |
+    #       docker build -t ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build ./federated_learning/server
+    #       docker push d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build
 
     - name: SSH into Azure ML Compute Instance
       uses: appleboy/ssh-action@master
@@ -61,8 +61,12 @@ jobs:
         port: 50000
         script: |
           az login --identity --allow-no-subscriptions
-          docker pull ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
-          docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build python server.py --trainingdata combined_data_sub1-9
+          cd ~/cloudfiles/code/users/callaghan-n7/test_code/server
+          ls
+          az ml job create --file server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+          cd ~/cloudfiles/code/users/callaghan-n7/test_code/clients
+          ls
+          az ml job create --file run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
           docker container ls -a
     - name: Add ML Extension
       run: az extension add --name ml
