--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -63,17 +63,16 @@ jobs:
           az login --identity --allow-no-subscriptions
           cd ~/cloudfiles/code/users/callaghan-n7/test_code/server
           ls
-          az ml job create --file server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+          python server.py --training_data subject2-4 --minimum_clients 3
           cd ~/cloudfiles/code/users/callaghan-n7/test_code/clients
           ls
-          az ml job create --file run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
-          docker container ls -a
+          python run_client.py --total_subjects 4
     - name: Add ML Extension
       run: az extension add --name ml
     
-    - name: Start Run Server
-      run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
-    - name: Start Run Clients
-      run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+    # - name: Start Run Server
+    #   run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+    # - name: Start Run Clients
+    #   run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
     - name: Test azure login by getting details
       run: az account show
