--- a/federated_learning/clients/requirements.txt
+++ b/federated_learning/clients/requirements.txt
@@ -1,8 +1,18 @@
 flwr
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
+pandas
+numpy
+keras
+scikit-learn
+tensorflow
+azure-ai-ml
+azure-identity
+fsspec
+azureml-fsspec
+azureml-mlflow
+mltable
+azureml
+azureml-core
 mlflow
 azureml-sdk
-azureml-mlflow
 joblib
+pytest
