--- a/.github/workflows/deploy_and_run.yml
+++ b/.github/workflows/deploy_and_run.yml
@@ -57,4 +57,10 @@ jobs:
               az login --identity --allow-no-subscriptions
               az extension add --name ml
               az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
-              az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+
+    - name: Start Run Server
+      run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+        
+
+    - name: Start Run Clients
+      run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
