--- a/.github/workflows/deploy_and_run.yml
+++ b/.github/workflows/deploy_and_run.yml
@@ -55,8 +55,11 @@ jobs:
           port: 50000
           script: |
               az login --identity --allow-no-subscriptions
-              az extension add --name ml
             #   az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+
+    - name: add azure ML
+      run:            az extension add --name ml
+
 
     - name: Start Run Server
       run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
